# electrificat

./: .gitignore  .pre-commit-config.yaml  README.md  electrificat.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: mkdocs.yml
docs/electrificat/: overview.md
notebooks/: 0-start.ipynb  00-start.ipynb  01-data_acquisition.ipynb
